--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
             <div class="slide" style="background-image: url('imagenes/imagen4.jpg');"></div>
             <div class="slide" style="background-image: url('imagenes/imagen5.jpg');"></div>
             <div class="slide" style="background-image: url('imagenes/imagen6.jpg');"></div>
+            <div class="slide" style="background-image: url('imagenes/imagen7.jpg');"></div>
             <!-- Agrega más carousel-slides con diferentes imágenes -->
         </div>
         <img class="Titulo" src="La_herradura-removebg-preview.png" alt="Título">
@@ -116,6 +117,8 @@ Pero eso no es todo. Además de deleitarte con una oferta gastronómica excepcio
                             <img src="carousel/image7.jpg" alt="">
                             <img src="carousel/image8.jpg" alt="">
                             <img src="carousel/image9.jpg" alt="">
+                            <img src="carousel/image10.jpg" alt="">
+                            <img src="carousel/image11.jpg" alt="">
                     </div>
                     <i id="right" class="fa-solid fa-angle-right"></i>
                 </div>
